feat(identity): Identity SQL Contract with managed and sql realms
Introduce tesseraql-identity, the IAM foundation that lets an existing
database back authentication/authorization by swapping SQL only
(design ch. 10.5, 10.7):

- RealmConfig (managed | sql), IdentityContracts (the contract names),
  and a ContractResolver that loads contract SQL from the bundled default
  identity pack (managed) or the app's security/identity/<realm>/ (sql).
- IdentityService executes contracts via the 2-way SQL engine and
  resolvePrincipal builds a Principal (user, roles, permissions, groups)
  with standardized aliases regardless of the underlying schema.
- Default identity pack: the standard tql_* PostgreSQL schema and the
  managed-realm contract SQL.
- Principal claims now tolerate null values.

Integration tests resolve the same principal from the managed standard
schema and from a differently-shaped existing database via swapped
contract SQL, and return empty for an unknown login.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>